src/snapshots/afrotd__parser__tests__interpretation_4.1.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 2
index: 3
text: "1. und 10 von der B-45. Ballträger A22 wird getackelt und fällt\nzu Boden, als er fumbelt. Ein Schiedsrichter pfeift irrtümlich ab. Spieler beider Teams versuchen den Ball zu recovern, und (a) B66 recovert\nden Ball klar sichtbar, während er auf dem Boden liegt. (b) es ist nicht\nklar, wer den Ball recovert hat."
ruling: "Regel 4.1.2.b.2.b wird angewandt. (a) Falls festgestellt wird, dass A22 die Kontrolle über den Ball\nverloren hat, bevor der Spieler down war, dann gehört der Ball Team B\nam Punkt der Recovery durch B66. (b) Falls nicht sicher bestimmt werden kann, welches Team den Ball recovert hat, kann Team A wählen,\nden Down vom Previous Spot zu wiederholen oder den nächsten Down\nan der Stelle zu spielen, an der der Ball sich befand, als er frei wurde."
