src/snapshots/afrotd__parser__tests__interpretation_4.1.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 2
index: 4
text: "4. und 15 von der A-30, Team A puntet. B44 befindet sich in\nPosition zum Fangen des Kicks. Bei dem Versuch, den Kick zu fangen,\nmufft B44 den Kick an der B-35. Als B44 den Kick scheinbar fängt,\npfeift der Backjudge irrtümlich ab, aber der Ball rollt auf dem Boden,\nnachdem B44 ihn gemufft hat. A88 verfolgt den Ball und recovert ihn\nin der unmittelbar folgenden Aktion nach dem Pfiff an der B-30."
ruling: "Irrtümliches Abpfeifen. Regel 4.1.2.b.2.b trifft zu. Team A erhält\nden Ball mit einem 1. und 10 an der B-30."
