src/snapshots/afrotd__parser__tests__interpretation_4.1.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 3
index: 1
text: "Während A1 den Ball zu einem Place Kick hält, (a) wird er von\neinem Team B-Spieler getackelt und ein Team B-Spieler recovert einen\nfreien Ball, (b) entreißt ein Team B-Spieler A1 den Ball oder (c) schlägt\nein Team B-Spieler A1 den Ball aus den Händen."
ruling: "(a) und\n(b) Der Ball bleibt im Spiel, (c) das Schlagen durch B1 ist legal und\nresultiert in einen Fumble."
