src/snapshots/afrotd__parser__tests__interpretation_4.1.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 3
index: 2
text: "Team A befindet sich in einer Formation, um ein Fieldgoal zu erzielen. Beim Snap befindet sich A22 in einer Position, um einen Place\nKick mit dem rechten Fuß durchzuführen, während sich A 33 in der\nPosition des Holders befindet. Der Snap geht zu A33, der mit einem\nKnie den Boden berührt. Direkt nach dem Snap läuft A22 nach links\nin Richtung der neutralen Zone. A33, der sich mit dem Knie noch auf\ndem Boden befindet, wirft den Ball zu A22, der den Ball fängt und diesen über die Line-to-Gain advanct, bevor er getackelt wird."
ruling: "Legales Spiel, weil A22 sich beim Snap in Position zum Kicken eines\nPlace Kicks befand. 1. und 10 für Team A."
