src/snapshots/afrotd__parser__tests__interpretation_4.1.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 3
index: 3
text: "3. und 10 von der A-35. Quarterback A11 läuft auf seine rechte\nSeite und rutscht mit den Füßen voran, weil er erkennt, dass er nicht\nweiterkommt. Als er das Rutschen beginnt, befindet sich der vorderste\nPunkt des Balles an der A-44. Als das Rutschen beendet ist, befindet\nsich der vorderste Punkt des Balles an der A-46."
ruling: "4. und\n1 von der A-44. Der Ball wird an dem Punkt dead, an dem sich sein\nvorderster Punkt befand, als das Rutschen begann."
