src/snapshots/afrotd__parser__tests__interpretation_4.1.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 4
index: 2
text: "Kicker A1 führt den Kickoff durch, bevor der Ball vom Referee\nfreigegeben wurde."
ruling: "Dead Ball Foul. Strafe – 5 Meter vom\nSucceeding Spot. Der Ball wird nicht zum Live Ball und alle Aktionen\nsollen sofort von den Schiedsrichtern unterbunden werden."
