src/snapshots/afrotd__parser__tests__interpretation_4.2.1_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 2
  - 1
index: 2
text: "Ballträger A1 läuft im Spielfeld in der Nähe der Seitenlinie, als er\nvom einem Team B-Teammitglied, der sich auf einer Seitenlinie befindet, berührt wird."
ruling: "Regel 4.2.1 besagt, dass ein Spieler sich\nim Aus befindet, wenn er mit einem Körperteil irgendetwas anderes als\neinen Spieler oder einen Schiedsrichter berührt, der sich auf oder hinter einer Seitenlinie befindet. Strafe – 15 Meter oder andere illegale\nBehinderungs-Strafen (Regeln 9.2.3 und 9.2.5)."
